# ArtOfRallyLeaderboard

./: main.py  proof_of_concept.py
bot/: Cargo.toml
bot/data/: Australia_Stage_1_Forward_Dry_80s  Australia_Stage_1_Forward_Dry_GroupA  Australia_Stage_1_Forward_Dry_GroupB  Australia_Stage_1_Forward_Wet_GroupS  Australia_Stage_2_Forward_Dry_60s  Australia_Stage_2_Forward_Dry_70s  Australia_Stage_2_Forward_Dry_80s  Australia_Stage_2_Forward_Dry_GroupA  Australia_Stage_2_Forward_Dry_GroupB  Australia_Stage_2_Forward_Dry_GroupS  Australia_Stage_2_Forward_Wet_GroupB  Australia_Stage_3_Forward_Dry_60s  Australia_Stage_3_Forward_Dry_70s  Australia_Stage_3_Forward_Dry_80s  Australia_Stage_3_Forward_Dry_GroupB  Australia_Stage_3_Forward_Wet_GroupA  Australia_Stage_4_Forward_Dry_60s  Australia_Stage_4_Forward_Dry_GroupA  Australia_Stage_4_Forward_Dry_GroupS  Australia_Stage_4_Forward_Wet_GroupS  Australia_Stage_5_Forward_Dry_60s  Australia_Stage_5_Forward_Dry_80s  Australia_Stage_5_Forward_Dry_GroupB  Australia_Stage_6_Forward_Dry_80s  Australia_Stage_6_Forward_Dry_GroupA  Australia_Stage_6_Forward_Dry_GroupB  Finland_Stage_1_Forward_Dry_60s  Finland_Stage_1_Forward_Dry_70s  Finland_Stage_1_Forward_Dry_80s  Finland_Stage_1_Forward_Dry_GroupA  Finland_Stage_1_Forward_Dry_GroupB  Finland_Stage_1_Forward_Dry_GroupS  Finland_Stage_2_Forward_Dry_60s  Finland_Stage_2_Forward_Dry_70s  Finland_Stage_2_Forward_Dry_GroupA  Finland_Stage_2_Forward_Dry_GroupB  Finland_Stage_2_Forward_Dry_GroupS  Finland_Stage_3_Forward_Dry_70s  Finland_Stage_3_Forward_Dry_80s  (+216 more)
bot/src/: main.rs
