[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.12", features = ["blocking"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
strum = "0.26.3"
strum_macros = "0.26.4"
